Fix bug where spacing between modal title and modal video were too close on ios.

--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -547,11 +547,11 @@ blockquote {
     }
 
     .subsection-modal-container .video-quality-changer-mobile {
+        flex: 1 0 auto;
         position: relative;
         margin-left: auto;
         color: #000000;
         transform: translateY(0);
-        margin-bottom: -1em;
         flex-direction: row;
         left: initial;
         top: initial;
@@ -819,10 +819,6 @@ blockquote {
         border-radius: 10px 10px 0 0;
         box-shadow: 0px -1px 0 0px #444, 1px 0px 0 0px #444, 0px 1px 0 0px #ccc, -1px 0px 0 0px #444;
     }   
-
-    .subsection-modal-text {
-        margin-top: 1em;
-    }
 
     .subsection-modal-text a {
         text-decoration: underline;
